# OpenCL-Parallel-Programming-Assignments

./: README.md
Dependencies/OpenCL-ICD-Loader/: CMakeLists.txt
Dependencies/common/: clutils.cpp  clutils.h
closest_pair/: CMakeLists.txt  closest_pair.cl  closest_pair.cpp
conways_game_of_life/: CGoL.cl  CGoL.cpp  CMakeLists.txt
parallel_scan/: CMakeLists.txt  parallel_scan.cl  parallel_scan.cpp
